test/bad/function_declaration_01.mpp
fun (x:int):int { return x; }
